feat(util): escape message formatting